主页静态展示

--- a/views/index.html
+++ b/views/index.html
@@ -145,7 +145,7 @@ class="layui-layout-body" layadmin-themealias="fashion-red-header"
         <!-- 主体内容 -->
         <div class="layui-body" id="LAY_app_body">
             <div class="layadmin-tabsbody-item layui-show">
-                <iframe src="./admin_files/console.html" frameborder="0" class="layadmin-iframe"></iframe>
+                <iframe src="/console.html" frameborder="0" class="layadmin-iframe"></iframe>
             </div>
         </div>
         <!-- 辅助元素，一般用于移动设备下遮罩 -->
