--- a/views/template/layout.html
+++ b/views/template/layout.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="//cdn.junn.top/layui/2.4.3/css/layui.css">
     <link rel="stylesheet" href="/css/admin.css">
     <link rel="stylesheet" href="/css/append.css?v={{version}}">
+    {% block link %}{% endblock %}
 </head>
 <body {% block bodyAttr %}{% endblock %}>
 
