--- a/views/console.html
+++ b/views/console.html
@@ -21,103 +21,25 @@
                                 <div carousel-item>
                                     <ul class="layui-row layui-col-space10">
                                         <li class="layui-col-xs3">
-                                            <a lay-href="home/homepage1.html">
-                                                <i class="layui-icon layui-icon-console"></i>
-                                                <cite>主页一</cite>
-                                            </a>
-                                        </li>
-                                        <li class="layui-col-xs3">
-                                            <a lay-href="home/homepage2.html">
-                                                <i class="layui-icon layui-icon-chart"></i>
-                                                <cite>主页二</cite>
-                                            </a>
-                                        </li>
-                                        <li class="layui-col-xs3">
-                                            <a lay-href="component/layer/list.html">
-                                                <i class="layui-icon layui-icon-template-1"></i>
-                                                <cite>弹层</cite>
-                                            </a>
-                                        </li>
-                                        <li class="layui-col-xs3">
-                                            <a layadmin-event="im">
-                                                <i class="layui-icon layui-icon-chat"></i>
-                                                <cite>聊天</cite>
-                                            </a>
-                                        </li>
-                                        <li class="layui-col-xs3">
-                                            <a lay-href="component/progress/index.html">
-                                                <i class="layui-icon layui-icon-find-fill"></i>
-                                                <cite>进度条</cite>
-                                            </a>
-                                        </li>
-                                        <li class="layui-col-xs3">
-                                            <a lay-href="app/workorder/list.html">
+                                            <a lay-href="/carStudent/carStudentForm.html">
                                                 <i class="layui-icon layui-icon-survey"></i>
-                                                <cite>工单</cite>
+                                                <cite>学员录入</cite>
                                             </a>
                                         </li>
                                         <li class="layui-col-xs3">
-                                            <a lay-href="user/user/list.html">
+                                            <a lay-href="/carStudent/carStudentList.html">
                                                 <i class="layui-icon layui-icon-user"></i>
-                                                <cite>用户</cite>
-                                            </a>
-                                        </li>
-                                        <li class="layui-col-xs3">
-                                            <a lay-href="set/system/website.html">
-                                                <i class="layui-icon layui-icon-set"></i>
-                                                <cite>设置</cite>
+                                                <cite>学员查询</cite>
                                             </a>
                                         </li>
                                     </ul>
                                     <ul class="layui-row layui-col-space10">
-                                        <li class="layui-col-xs3">
+                                        <!-- <li class="layui-col-xs3">
                                             <a lay-href="set/user/info.html">
                                                 <i class="layui-icon layui-icon-set"></i>
                                                 <cite>我的资料</cite>
                                             </a>
-                                        </li>
-                                        <li class="layui-col-xs3">
-                                            <a lay-href="set/user/info.html">
-                                                <i class="layui-icon layui-icon-set"></i>
-                                                <cite>我的资料</cite>
-                                            </a>
-                                        </li>
-                                        <li class="layui-col-xs3">
-                                            <a lay-href="set/user/info.html">
-                                                <i class="layui-icon layui-icon-set"></i>
-                                                <cite>我的资料</cite>
-                                            </a>
-                                        </li>
-                                        <li class="layui-col-xs3">
-                                            <a lay-href="set/user/info.html">
-                                                <i class="layui-icon layui-icon-set"></i>
-                                                <cite>我的资料</cite>
-                                            </a>
-                                        </li>
-                                        <li class="layui-col-xs3">
-                                            <a lay-href="set/user/info.html">
-                                                <i class="layui-icon layui-icon-set"></i>
-                                                <cite>我的资料</cite>
-                                            </a>
-                                        </li>
-                                        <li class="layui-col-xs3">
-                                            <a lay-href="set/user/info.html">
-                                                <i class="layui-icon layui-icon-set"></i>
-                                                <cite>我的资料</cite>
-                                            </a>
-                                        </li>
-                                        <li class="layui-col-xs3">
-                                            <a lay-href="set/user/info.html">
-                                                <i class="layui-icon layui-icon-set"></i>
-                                                <cite>我的资料</cite>
-                                            </a>
-                                        </li>
-                                        <li class="layui-col-xs3">
-                                            <a lay-href="set/user/info.html">
-                                                <i class="layui-icon layui-icon-set"></i>
-                                                <cite>我的资料</cite>
-                                            </a>
-                                        </li>
+                                        </li> -->
                                     </ul>
                                 </div>
                             </div>
@@ -129,17 +51,16 @@
                     <div class="layui-card">
                         <div class="layui-card-header">待办事项</div>
                         <div class="layui-card-body">
-
                             <div class="layui-carousel layadmin-carousel layadmin-backlog">
                                 <div carousel-item>
                                     <ul class="layui-row layui-col-space10">
                                         <li class="layui-col-xs6">
-                                            <a lay-href="app/content/comment.html" class="layadmin-backlog-body">
-                                                <h3>待审评论</h3>
-                                                <p><cite>66</cite></p>
+                                            <a lay-href="/carTrainer/carTrainerList.html?status=false" class="layadmin-backlog-body">
+                                                <h3>待审核教练</h3>
+                                                <p><cite>{{noPassTrainerNum}}</cite></p>
                                             </a>
                                         </li>
-                                        <li class="layui-col-xs6">
+                                        <!-- <li class="layui-col-xs6">
                                             <a lay-href="app/forum/list.html" class="layadmin-backlog-body">
                                                 <h3>待审帖子</h3>
                                                 <p><cite>12</cite></p>
@@ -156,15 +77,15 @@
                                                 <h3>待发货</h3>
                                                 <p><cite>20</cite></p>
                                             </a>
-                                        </li>
+                                        </li> -->
                                     </ul>
                                     <ul class="layui-row layui-col-space10">
-                                        <li class="layui-col-xs6">
+                                        <!-- <li class="layui-col-xs6">
                                             <a href="javascript:;" class="layadmin-backlog-body">
                                                 <h3>待审友情链接</h3>
                                                 <p><cite style="color: #FF5722;">5</cite></p>
                                             </a>
-                                        </li>
+                                        </li> -->
                                     </ul>
                                 </div>
                             </div>
@@ -210,17 +131,20 @@
                 <div class="layui-card-header">效果报告</div>
                 <div class="layui-card-body layadmin-takerates">
                     <div class="layui-progress" lay-showPercent="yes">
-                        <h3>转化率（日同比 28% <span class="layui-edge layui-edge-top" lay-tips="增长" lay-offset="-15"></span>）</h3>
-                        <div class="layui-progress-bar" lay-percent="65%"></div>
+                        <h3>科目一通过率（月同比 0% <span class="layui-edge layui-edge-top" lay-tips="增长" lay-offset="-15"></span>）</h3>
+                        <div class="layui-progress-bar" lay-percent="0%"></div>
                     </div>
                     <div class="layui-progress" lay-showPercent="yes">
-                        <h3>签到率（日同比 11% <span class="layui-edge layui-edge-bottom" lay-tips="下降" lay-offset="-15"></span>）</h3>
-                        <div class="layui-progress-bar" lay-percent="32%"></div>
+                        <h3>科目二通过率（月同比 0% <span class="layui-edge layui-edge-top" lay-tips="增长" lay-offset="-15"></span>）</h3>
+                        <div class="layui-progress-bar" lay-percent="0%"></div>
+                    </div>
+                    <div class="layui-progress" lay-showPercent="yes">
+                        <h3>科目三通过率（月同比 0% <span class="layui-edge layui-edge-top" lay-tips="增长" lay-offset="-15"></span>）</h3>
+                        <div class="layui-progress-bar" lay-percent="0%"></div>
                     </div>
                 </div>
             </div>
-
-            <div class="layui-card">
+            <!-- <div class="layui-card">
                 <div class="layui-card-header">实时监控</div>
                 <div class="layui-card-body layadmin-takerates">
                     <div class="layui-progress" lay-showPercent="yes">
@@ -232,7 +156,7 @@
                         <div class="layui-progress-bar layui-bg-red" lay-percent="90%"></div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
