考试记录基础逻辑

--- a/views/carStudent/carStudentForm.html
+++ b/views/carStudent/carStudentForm.html
@@ -53,7 +53,7 @@
                             <label class="layui-form-label required">有效期止</label>
                             <div class="layui-input-inline">
                                 <input type="text" name="cardExpiryDate" id="cardExpiryDate" value="{{carStudent.cardExpiryDate && carStudent.cardExpiryDate | date('Y-m-d')}}"
-                                    id="LAY-component-form-group-date" lay-verify="date" placeholder="" required
+                                     lay-verify="date" placeholder="" required
                                     autocomplete="off" class="layui-input">
                             </div>
                         </div>
@@ -61,7 +61,7 @@
                             <label class="layui-form-label required">出生年月</label>
                             <div class="layui-input-inline">
                                 <input type="text" name="birthday" id="birthday" required value="{{carStudent.birthday && carStudent.birthday | date('Y-m-d')}}"
-                                    id="LAY-component-form-group-date" lay-verify="date" placeholder="" autocomplete="off"
+                                     lay-verify="date" placeholder="" autocomplete="off"
                                     class="layui-input">
                             </div>
                         </div>
